--- a/credits.html
+++ b/credits.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Royal Recipes a Hotels and restaurants Category Flat Bootstrap responsive Website Template | Contact :: w3layouts</title>
+<title>Royal Recipes a Hotels and restaurants Category Flat Bootstrap responsive Website Template | Menu :: w3layouts</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Royal Recipes Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
@@ -18,6 +18,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!--// bootstrap-css -->
 <!-- css -->
 <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
+<link rel="stylesheet" href="css/lightbox.css">
 <!--// css -->
 <!-- font-awesome icons -->
 <link href="css/font-awesome.css" rel="stylesheet"> 
@@ -91,9 +92,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										<li><a class="hvr-bounce-to-bottom" href="typography.html">Typography</a></li>          
 									</ul>
 								</li>								
-								<li><a href="menu.html">Menu</a></li>
-								<li><a class="active" href="contact.html">Contact</a></li>
-							</ul>	
+								<li><a class="active" href="menu.html">Menu</a></li>
+								<li><a href="contact.html">Contact</a></li>
+							</ul>
 							<div class="clearfix"> </div>
 						</div>	
 					</nav>		
@@ -102,146 +103,52 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 		</div>
 		<div class="w3-about-heading">
-			<h2>Contact</h2>
+			<h2>Menu</h2>
 		</div>
 	</div>
 	<!-- banner -->
-	<!-- contact -->
-	<div class="contact">
-		<div class="container">	
-			<div class="w3l-map">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d158858.18237072596!2d-0.10159865000003898!3d51.52864165000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1436514341845" allowfullscreen=""></iframe>
-			</div>
-			<div class="contact-form">
-				<h3>Contact form</h3>
-				<form action="#" method="post">
-					<input type="text" name="Name" placeholder="Name" required="">
-					<input type="text" name="Email" placeholder="Email" required="">
-					<input type="text" name="Subject" placeholder="Subject" required="">
-					<textarea name="Message" placeholder="Message" required=""></textarea>
-					<input type="submit" value="Send">
-				</form>
-			</div>
-			<div class="w3ls-contact-grids">
-				<h3>Our Branches</h3>
-				<div class="agileits-address-grids">
-					<div class="col-md-4 address-text">
-						<div class="agileinfo-address-grid">
-							<h5>10-43 Jack Road, 
-								<span>Glasgow, D-6 78GH</span>
-							</h5>
-							<div class="wthree-address-info">
-								<div class="w3-agileits-address-info-left">
-									<p>Freephone :</p>
-								</div>
-								<div class="address-info-left address-info-right">
-									<p>+1 123 456 7890</p>
-								</div>
-								<div class="clearfix"> </div>
-							</div>
-							<div class="wthree-address-info">
-								<div class="w3-agileits-address-info-left">
-									<p>Telephone :</p>
-								</div>
-								<div class="w3-agileits-address-info-left address-info-right">
-									<p>+1 123 456 7890</p>
-								</div>
-								<div class="clearfix"> </div>
-							</div>
-							<div class="wthree-address-info">
-								<div class="w3-agileits-address-info-left">
-									<p>FAX :</p>
-								</div>
-								<div class="w3-agileits-address-info-left address-info-right">
-									<p>+1 123 456 7890</p>
-								</div>
-								<div class="clearfix"> </div>
-							</div>
-								<div class="e-mail">
-									<p>E-mail : <a href="mailto:example@email.com">Example@mail.com</a></p>
-								</div>
+	<!--gallery-->
+	<div class="gallery">
+		<div class="container">
+			<div class="agileinfo-gallery">
+				<div class="col-md-4 col-sm-6 w3-agileits-gallery-grids">
+					<a class="w3 wow zoomIn animated" data-wow-delay=".5s" href="images/salade.jpg" data-lightbox="example-set" data-title="Salade">
+						<img src="images/salade.jpg" class="img-responsive zoom-img" alt=""/>
+						<div class="agile-b-wrapper">
+							<h5>Food photo created by freepik - www.freepik.com</h5>
 						</div>
-					</div>
-					<div class="col-md-4 address-text">
-						<div class="agileinfo-address-grid">
-							<h5>09-45 Mary Road, 
-								<span>London, J-9 09SD</span>
-							</h5>
-							<div class="wthree-address-info">
-								<div class="w3-agileits-address-info-left">
-									<p>Freephone :</p>
-								</div>
-								<div class="address-info-left address-info-right">
-									<p>+1 123 456 7890</p>
-								</div>
-								<div class="clearfix"> </div>
-							</div>
-							<div class="wthree-address-info">
-								<div class="w3-agileits-address-info-left">
-									<p>Telephone :</p>
-								</div>
-								<div class="w3-agileits-address-info-left address-info-right">
-									<p>+1 123 456 7890</p>
-								</div>
-								<div class="clearfix"> </div>
-							</div>
-							<div class="wthree-address-info">
-								<div class="w3-agileits-address-info-left">
-									<p>FAX :</p>
-								</div>
-								<div class="w3-agileits-address-info-left address-info-right">
-									<p>+1 123 456 7890</p>
-								</div>
-								<div class="clearfix"> </div>
-							</div>
-							<div class="e-mail">
-								<p>E-mail : <a href="mailto:example@email.com">Example@mail.com</a></p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4 address-text">
-						<div class="agileinfo-address-grid">
-							<h5>34-05 Shone Road, 
-								<span>Mexico, M-5 09SD</span>
-							</h5>
-							<div class="wthree-address-info">
-								<div class="w3-agileits-address-info-left">
-									<p>Freephone :</p>
-								</div>
-								<div class="w3-agileits-address-info-left address-info-right">
-									<p>+1 123 456 7890</p>
-								</div>
-								<div class="clearfix"> </div>
-							</div>
-							<div class="wthree-address-info">
-								<div class="w3-agileits-address-info-left">
-									<p>Telephone :</p>
-								</div>
-								<div class="w3-agileits-address-info-left address-info-right">
-									<p>+1 123 456 7890</p>
-								</div>
-								<div class="clearfix"> </div>
-							</div>
-							<div class="wthree-address-info">
-								<div class="w3-agileits-address-info-left">
-									<p>FAX :</p>
-								</div>
-								<div class="w3-agileits-address-info-left address-info-right">
-									<p>+1 123 456 7890</p>
-								</div>
-								<div class="clearfix"> </div>
-							</div>
-							<div class="e-mail">
-								<p>E-mail : <a href="mailto:example@email.com">Example@mail.com</a></p>
-							</div>
-						</div>
-					</div>
-					<div class="clearfix"> </div>
+					</a>
 				</div>
-			</div>
-		</div> 			
-	</div>
-	<!-- //contact -->
+				<div class="col-md-4 col-sm-6 w3-agileits-gallery-grids">
+					<a class="wow zoomIn animated" data-wow-delay=".7s" href="images/escargots.jpg" data-lightbox="example-set" data-title="Escargots">
+						<img src="images/escargots.jpg" class="img-responsive zoom-img" alt=""/>
+						<div class="agile-b-wrapper">
+							<h5>Food photo created by whatwolf - www.freepik.com</h5>
+						</div>
+					</a>
+				</div>
+				<div class="col-md-4 col-sm-6 w3-agileits-gallery-grids gallery-two wthree">
+					<a class="wow zoomIn animated" data-wow-delay=".9s" href="images/spaghetti.jpg" data-lightbox="example-set" data-title="Spaghetti">
+						<img src="images/spaghetti.jpg" class="img-responsive zoom-img" alt=""/>
+						<div class="agile-b-wrapper">
+							<h5>Background photo created by freepik - www.freepik.com</h5>
+						</div>
+					</a>
+				</div>
+				<div class="col-md-4 col-sm-6 w3-agileits-gallery-grids agileits-gallery-grids">
+					<a class="wow zoomIn animated" data-wow-delay=".5s" href="images/lasagne.jpg" data-lightbox="example-set" data-title="Lasagne">
+						<img src="images/lasagne.jpg" class="img-responsive zoom-img" alt=""/>
+						<div class="agile-b-wrapper">
+							<h5>Food photo created by stockking - www.freepik.com</h5>
+						</div>
+					</a>
+				</div>
+				<div class="clearfix"> </div>
+				<script src="js/lightbox-plus-jquery.min.js"> </script>
+			</div>	
+		</div>	
+	</div>	
+	<!--//gallery-->
 	<!-- footer -->
 	<div class="w3-agile-footer">
 		<div class="container">
