--- a/credits.html
+++ b/credits.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Royal Recipes a Hotels and restaurants Category Flat Bootstrap responsive Website Template | Menu :: w3layouts</title>
+<title>IFT1142-TP1 - Marjolaine Hébert - crédits photos</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Royal Recipes Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
@@ -23,10 +23,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- font-awesome icons -->
 <link href="css/font-awesome.css" rel="stylesheet"> 
 <!-- //font-awesome icons -->
-<!-- font -->
-<link href='//fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-<link href='//fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700' rel='stylesheet' type='text/css'>
-<!-- //font -->
 <script src="js/jquery-1.11.1.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <!-- light-box -->
@@ -55,16 +51,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="container">
 				<div class="top-banner-left">
 					<ul>
-						<li><i class="fa fa-phone" aria-hidden="true"></i> +1 234 567 8901</li>
-						<li><a href="mailto:example@email.com"><i class="fa fa-envelope" aria-hidden="true"></i> mail@example.com</a></li>
+						<li><i class="fa fa-folder-open-o" aria-hidden="true"></i> IFT1142 - TP1</li>
+						<li>Marjolaine Hébert</li>
 					</ul>
 				</div>
 				<div class="top-banner-right">
 					<ul>
-						<li><a class="facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-						<li><a class="facebook" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-						<li><a class="facebook" href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
-						<li><a class="facebook" href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+						<li><a href="index.html">Le menu</li>
+						<li><a class="facebook" href="mailto:marjolaine.hebert@umontreal.ca"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
 					</ul>
 				</div>
 				<div class="clearfix"> </div>
@@ -72,38 +66,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 		<div class="header">
 			<div class="container">
-				<div class="logo">
+				<div class="logo align-center">
 					<h1>
-						<a href="index.html">Royal Recipes</a>
+						<a href="index.html">La Trattoria méditéranéenne</a>
 					</h1>
 				</div>
-				<div class="top-nav">
-					<nav class="navbar navbar-default">
-							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">Menu						
-							</button>
-						<!-- Collect the nav links, forms, and other content for toggling -->
-						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-							<ul class="nav navbar-nav">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="about.html">About</a></li>
-								<li><a href="#" class="dropdown-toggle hvr-bounce-to-bottom" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Codes<span class="caret"></span></a>
-									<ul class="dropdown-menu">
-										<li><a class="hvr-bounce-to-bottom" href="icons.html">Icons</a></li>
-										<li><a class="hvr-bounce-to-bottom" href="typography.html">Typography</a></li>          
-									</ul>
-								</li>								
-								<li><a class="active" href="menu.html">Menu</a></li>
-								<li><a href="contact.html">Contact</a></li>
-							</ul>
-							<div class="clearfix"> </div>
-						</div>	
-					</nav>		
-				</div>
+				
 				<div class="clearfix"> </div>
 			</div>
 		</div>
-		<div class="w3-about-heading">
-			<h2>Menu</h2>
+		<div class="w3-about-heading py-xl">
+			<h2>Crédits Photo</h2>
 		</div>
 	</div>
 	<!-- banner -->
