--- a/credits.html
+++ b/credits.html
@@ -7,46 +7,23 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>IFT1142-TP1 - Marjolaine Hébert - crédits photos</title>
+	<title>IFT1142-TP1 - Marjolaine Hébert</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Royal Recipes Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+<meta name="keywords" content="TP1 effectué par Marjolaine Hébert dans le cours IFT1142" />
 <!-- bootstrap-css -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-<!--// bootstrap-css -->
 <!-- css -->
 <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
-<link rel="stylesheet" href="css/lightbox.css">
-<!--// css -->
 <!-- font-awesome icons -->
 <link href="css/font-awesome.css" rel="stylesheet"> 
-<!-- //font-awesome icons -->
-<script src="js/jquery-1.11.1.min.js"></script>
-<script src="js/bootstrap.js"></script>
 <!-- light-box -->
 <link rel="stylesheet" href="css/lightbox.css">
-<!-- //light-box -->
 <script src="js/SmoothScroll.min.js"></script>
-<!--search jQuery-->
-<script src="js/main.js"></script>
-<!--//search jQuery-->
-<script type="text/javascript">
-	jQuery(document).ready(function($) {
-		$(".scroll").click(function(event){		
-			event.preventDefault();
-			$('html,body').animate({scrollTop:$(this.hash).offset().top},1000);
-		});
-	});
-</script>
 </head>
 <body>
-	<div class="w3layouts-banner-top">
-		
-	</div>
-	<!-- banner -->
-	<div class="banner">
+	<!-- banniere -->
+	<div class="banner bordure-rouge">
 		<div class="top-banner">
 			<div class="container">
 				<div class="top-banner-left">
@@ -70,13 +47,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<h1>
 						<a href="index.html">La Trattoria méditéranéenne</a>
 					</h1>
+					<h2 class="blanc py-sm">Crédits Photo</h2>
 				</div>
-				
 				<div class="clearfix"> </div>
 			</div>
-		</div>
-		<div class="w3-about-heading pt-lg">
-			<h2>Crédits Photo</h2>
 		</div>
 	</div>
 	<!-- banner -->
