deleted unnecessary files

--- a/index.html
+++ b/index.html
@@ -65,21 +65,26 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 			
 			<!-- conteneur les entrées -->
-			<div id="plat-entree" class="col-sm-6 pb-md">
+			<div id="plat-entree" class="col-sm-6 pb-md text-center">
 				<h4>Entrées</h4>
 				<select></select>
-				<img src="images/escargots.jpg" class="img-responsive">
+				<img src="images/escargots.jpg" class="img-responsive py-sm">
 				<p>prix</p>
 			</div>
 
 			<!-- conteneur plats principaux -->
-			<div id="plat-rincipal" class="col-sm-6 pb-md">
-				contenu plats
+			<div id="plat-entree" class="col-sm-6 pb-md text-center">
+				<h4>Repas</h4>
+				<select></select>
+				<img src="images/escargots.jpg" class="img-responsive py-sm">
+				<p>prix</p>
 			</div>
 
 			<!-- conteneur prix -->
-			<div id="afficher-prix" class="col-12">
-
+			<div id="afficher-prix" class="col-xs-12 col-12 text-center">
+				Sous-total : montant
+				Taxes : montant
+				Total : montant
 			</div>
 			
 		</div>
