--- a/credits.html
+++ b/credits.html
@@ -24,6 +24,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <body>
 	<!-- banniere -->
 	<div class="banner bordure-rouge">
+		<!-- identification -->
 		<div class="top-banner">
 			<div class="container">
 				<div class="top-banner-left">
@@ -38,56 +39,61 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<li><a class="facebook" href="mailto:marjolaine.hebert@umontreal.ca"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
 					</ul>
 				</div>
-				<div class="clearfix"> </div>
 			</div>
 		</div>
+		<!-- grosse image avec texte et bouton dessus -->
 		<div class="header">
 			<div class="container">
 				<div class="logo grand-titre">
 					<h1>
 						<a href="index.html">La Trattoria méditéranéenne</a>
 					</h1>
-					<h2 class="blanc py-sm">Crédits Photo</h2>
+					<a class="btn btn-primary" href="index.html#menu">Commander maintenant</a>
 				</div>
-				<div class="clearfix"> </div>
 			</div>
 		</div>
 	</div>
-	<!-- banner -->
+	<!-- //banniere -->
 
-	<!--gallery-->
+	<!--gallerie photo-->
 	<div class="gallery">
+		<div class="container py-xl">
+			<div class="services-heading">
+				<h2>Crédits photo</h2>
+				<h3 class="rouge text-center pb-lg">pour les photos ajoutées au site</h3>
+			</div>
+		</div>
 		<div class="container">
 			<div class="agileinfo-gallery">
 				<div class="col-md-4 col-sm-6 w3-agileits-gallery-grids">
-					<a class="w3 wow zoomIn animated" data-wow-delay=".5s" href="images/salade.jpg" data-lightbox="example-set" data-title="Salade">
+					<a class="w3 wow zoomIn animated" data-wow-delay=".5s" href="images/salade.jpg" data-lightbox="example-set" data-title="Salade : Photo créée par freepik - www.freepik.com">
 						<img src="images/salade.jpg" class="img-responsive zoom-img" alt=""/>
 						<div class="agile-b-wrapper">
-							<h5>Food photo created by freepik - www.freepik.com</h5>
+							<h5>Photo créée par freepik - www.freepik.com</h5>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-4 col-sm-6 w3-agileits-gallery-grids">
-					<a class="wow zoomIn animated" data-wow-delay=".7s" href="images/escargots.jpg" data-lightbox="example-set" data-title="Escargots">
+					<a class="wow zoomIn animated" data-wow-delay=".7s" href="images/escargots.jpg" data-lightbox="example-set" data-title="Escargots : Photo créée par  whatwolf - www.freepik.com">
 						<img src="images/escargots.jpg" class="img-responsive zoom-img" alt=""/>
 						<div class="agile-b-wrapper">
-							<h5>Food photo created by whatwolf - www.freepik.com</h5>
+							<h5>Photo créée par  whatwolf - www.freepik.com</h5>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-4 col-sm-6 w3-agileits-gallery-grids gallery-two wthree">
-					<a class="wow zoomIn animated" data-wow-delay=".9s" href="images/spaghetti.jpg" data-lightbox="example-set" data-title="Spaghetti">
+					<a class="wow zoomIn animated" data-wow-delay=".9s" href="images/spaghetti.jpg" data-lightbox="example-set" data-title="Spaghetti : Photo créée par  freepik - www.freepik.com">
 						<img src="images/spaghetti.jpg" class="img-responsive zoom-img" alt=""/>
 						<div class="agile-b-wrapper">
-							<h5>Background photo created by freepik - www.freepik.com</h5>
+							<h5>Photo créée par  freepik - www.freepik.com</h5>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-4 col-sm-6 w3-agileits-gallery-grids agileits-gallery-grids">
-					<a class="wow zoomIn animated" data-wow-delay=".5s" href="images/lasagne.jpg" data-lightbox="example-set" data-title="Lasagne">
+					<a class="wow zoomIn animated" data-wow-delay=".5s" href="images/lasagne.jpg" data-lightbox="example-set" data-title="Lasagne : Photo créée par  stockking - www.freepik.com">
 						<img src="images/lasagne.jpg" class="img-responsive zoom-img" alt=""/>
 						<div class="agile-b-wrapper">
-							<h5>Food photo created by stockking - www.freepik.com</h5>
+							<h5>Photo créée par  stockking - www.freepik.com</h5>
 						</div>
 					</a>
 				</div>
