--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <body>
 	<!-- banniere -->
 	<div class="banner bordure-rouge">
+		<!-- identification -->
 		<div class="top-banner">
 			<div class="container">
 				<div class="top-banner-left">
@@ -38,9 +39,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<li><a class="facebook" href="mailto:marjolaine.hebert@umontreal.ca"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
 					</ul>
 				</div>
-				<div class="clearfix"> </div>
 			</div>
 		</div>
+		<!-- grosse image avec texte et bouton dessus -->
 		<div class="header">
 			<div class="container">
 				<div class="logo grand-titre">
@@ -49,15 +50,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</h1>
 					<a class="btn btn-primary" href="index.html#menu">Commander maintenant</a>
 				</div>
-				
-				<div class="clearfix"> </div>
 			</div>
 		</div>
 	</div>
-	<!-- banniere -->
+	<!-- //banniere -->
 
 	<!-- Le menu -->
-	<div class="services" id="services">
+	<div class="services" id="menu">
 		<div class="container py-xl">
 			<div class="services-heading">
 				<h2>Le menu</h2>
