certains styles en ajustements

--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@ License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
 	<title>IFT1142-TP1 - Marjolaine Hébert</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="TP1 effectué par Marjolaine Hébert dans le cours IFT1142" />
-<!-- bootstrap-css -->
-<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- css -->
+<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
+<link rel="stylesheet" href="css/select.css" type="text/css" media="all" />
 <!-- font-awesome icons -->
 <link href="css/font-awesome.css" rel="stylesheet"> 
 <!-- light-box -->
@@ -88,6 +88,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 			<!-- calculer le prix -->
 			<div id="afficher-prix" class="col-xs-12 col-12 text-center afficher-prix">
+                <h3 class="rouge text-center">Votre facture</h3>
 				<div class="px-md inline">
 					Sous-total : <span id="prix-avant-taxes" class="bold">0 $</span>
 				</div>
