--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!-- light-box -->
 <link rel="stylesheet" href="css/lightbox.css">
 <script src="js/SmoothScroll.min.js"></script>
-<script src="javascript/fonctions2.js"></script>
+<script src="javascript/fonctions.js"></script>
 </head>
 
 <body onLoad="remplirSelEntree(); remplirSelRepas();  calculerPrix();">
