finaliser les styles

--- a/credits.html
+++ b/credits.html
@@ -30,13 +30,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="top-banner-left">
 					<ul>
 						<li><i class="fa fa-folder-open-o" aria-hidden="true"></i> IFT1142 - TP1</li>
+						<li>Matricule 20149459</li>
 						<li>Marjolaine Hébert</li>
-					</ul>
-				</div>
-				<div class="top-banner-right">
-					<ul>
-						<li><a href="index.html">Le menu</li>
-						<li><a class="facebook" href="mailto:marjolaine.hebert@umontreal.ca"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
 					</ul>
 				</div>
 			</div>
@@ -108,6 +103,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="w3-agile-footer">
 		<div class="container">
 			<div class="agileits-w3layouts-copyright">
+				<p><a href="index.html">Le menu</a></p>
 				<p>Design by <a href="http://w3layouts.com/"> W3layouts</a> </p>
 			</div>
 		</div>
