--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-	<title>IFT1142-TP1 - Marjolaine Hébert</title>
+	<title>IFT1142-TP1 - Marjolaine Hébert - 20149459</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="TP1 effectué par Marjolaine Hébert dans le cours IFT1142" />
@@ -32,13 +32,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="top-banner-left">
 					<ul>
 						<li><i class="fa fa-folder-open-o" aria-hidden="true"></i> IFT1142 - TP1</li>
+						<li>Matricule 20149459</li>
 						<li>Marjolaine Hébert</li>
-					</ul>
-				</div>
-				<div class="top-banner-right">
-					<ul>
-						<li><a href="credits.html">Crédits Photo</li>
-						<li><a class="facebook" href="mailto:marjolaine.hebert@umontreal.ca"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
 					</ul>
 				</div>
 			</div>
@@ -68,7 +63,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<!-- conteneur les entrées -->
 			<div id="entree" class="col-sm-6 pb-md text-center">
                 <label>Entr&eacute;e </label>
-                <select class="select-css" id="selEntree" onchange="infoEntreeChoisi(this);"></select>
+                <select class="select-css" name="selEntree" id="selEntree" onchange="infoEntreeChoisi(this);"></select>
                 <div  class="pt-md">
 					<img class="img-responsive" src="" id="imgEntree">
 				</div>
@@ -78,7 +73,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<!-- conteneur plats principaux -->
 			<div id="repas" class="col-sm-6 pb-md text-center">
                 <label>Repas </label>
-                <select class="select-css" id="selRepas" onchange="infoRepasChoisi(this);"></select>
+                <select class="select-css" name="selRepas" id="selRepas" onchange="infoRepasChoisi(this);"></select>
                 <div  class="pt-md">
 					<img class="img-responsive" src="" id="imgRepas">
 				</div>
@@ -107,6 +102,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="w3-agile-footer">
 		<div class="container">
 			<div class="agileits-w3layouts-copyright">
+				<p><a href="credits.html">Crédits Photo</a></p>
 				<p>Design by <a href="http://w3layouts.com/"> W3layouts</a> </p>
 			</div>
 		</div>
